增加字体图标

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=816d343fae39ae275924",
+    "/css/app.css": "/css/app.css?id=25feb623a7e1d773711d"
 }
